Scrollbar fix.

--- a/assets/furllery.css
+++ b/assets/furllery.css
@@ -134,7 +134,7 @@
   display: none;
 }
 .df-furllery-gallery-wrapper .df-furllery-header {
-  width: calc(100% - 200px);
+  width: calc(100% - 205px);
   height: 100px;
   position: absolute;
   top: 0;
@@ -177,7 +177,7 @@
 }
 
 .df-furllery-gallery-wrapper .df-furllery-preview {
-  width: calc(100% - 200px);
+  width: calc(100% - 205px);
   height: calc(100% - 200px);
   position: absolute;
   bottom: 100px;
@@ -245,7 +245,7 @@
 .df-furllery-gallery-wrapper .df-furllery-aside {
   background-color: rgba(12, 12, 12, 0.52);
 
-  width: 200px;
+  width: 205px;
   height: 100%;
   position: absolute;
   right: 0;
@@ -256,7 +256,7 @@
   flex-wrap: wrap;
   align-items: center;
   align-content: flex-start;
-  justify-content: space-between;
+  justify-content: center;
 
   overflow: auto;
   transition: all .2s;
@@ -274,6 +274,9 @@
   background-color: #f3f4f5;
   transition: all .2s;
 }
+.df-furllery-gallery-wrapper .df-furllery-aside .df-furllery-panel-thumbnail:last-child {
+  margin-right: auto;
+}
 .df-furllery-gallery-wrapper .df-furllery-aside .df-furllery-panel-thumbnail:nth-child(odd) {
   margin-right: 10px;
 }
@@ -290,7 +293,7 @@
 }
 
 .df-furllery-gallery-wrapper .df-furllery-footer {
-  width: calc(100% - 200px);
+  width: calc(100% - 205px);
   height: 100px;
   position: absolute;
   bottom: 0;
